4/20/24 - Hatt
=======================================================================================================================
 - Fixed the profile system.
 - Added triggers for summoning Luke and Unlucky
=======================================================================================================================

4/18/24 - Hatt
=======================================================================================================================
 - Bug fixing antimagic kounai reported by Ava
=======================================================================================================================

4/17/24 - Hatt
=======================================================================================================================
 - Added Cut Sandstone to the list of dig spell acceptable blocks.
 - Fixed typo in metal line book
 - Bug fixing
=======================================================================================================================

4/16/24 - Hatt
=======================================================================================================================
 - Re-opened Git repository to allow other users to help.
 - Over the course of time between the last note and this one, I have added a lot of stuff and fixed a lot of bugs, the datapack is waaaaaaay different now than what it was before.
 - Started work on the shadow cat dungeon loot tables
 - Addedx a caster skin
 - Added moss to the dig spell break list
 - Found out that pots cannot be given a loot table in the version we are working in. Sad.

Created Files:
    minecraft/loot_tables/rscd_chest_curch.json
    minecraft/loot_tables/rscd_chest_common.json
Removed Files:
    minecraft/loot_tables/rscd_chest_rare.json
    minecraft/loot_tables/rscd_pots_common.json
    minecraft/loot_tables/rscd_pots_rare.json
=======================================================================================================================
