@@ -1,0 +1,5 @@
+scoreboard players set @s overwil_cooldown 200
+execute at @s run playsound block.glass.break ambient @a ~ ~ ~ 1 0 
+execute at @s run particle flash ~ ~1 ~ 0 0 0 0 1 force
+execute at @s run particle flame ~ ~1 ~ 0 0 0 1 20 force
+execute at @s as @e[type=#chocolate_datapack:spell_components,distance=..3] unless score @s player_id = @p player_id unless score @s team_id = @p team_id run kill @s
