@@ -1,3 +1,9 @@
+4/21/24 - Hatt
+=======================================================================================================================
+ - added the first spell scrolls
+ - Overwil added
+=======================================================================================================================
+
 4/20/24 - Hatt
 =======================================================================================================================
  - Fixed the profile system.
